@@ -1,23 +1,23 @@
 ##Release Process
 
-There are two distinct sets of artifacts in two repositories that are typically released together:  streams-project and streams-examples.
+There are two distinct sets of artifacts in two repositories that are typically released together:  apache-streams and apache-streams-examples.
 
-streams-project artifacts include streams source code and convenience jars by module.  
+apache-streams artifacts include streams source code and convenience jars by module.  
 
-streams-examples source code builds ready-to-run stand-alone examples as uber-jars.
+apache-streams-examples source code builds ready-to-run stand-alone examples as uber-jars.
 
 Releases must be built and published in the following order:
 
-* streams-project
-* streams-examples
+* apache-streams
+* apache-streams-examples
 
 In the instructions below, ${project.name} should be one of these top-level repository aggregator pom project names.
 
 ###NOTE: 
 
-As a streams release manager, you probably want to use the release.sh and publish-rc.sh scripts in the root of streams-project.
+As a streams release manager, you probably want to use the release.sh and publish-rc.sh scripts in the root of apache-streams.
 
-To perform a release manually, or to better understand what's going on, read the intructions below.
+To perform a release manually, or to better understand what's going on, read the instructions below.
 
 In either case, you'll need to first refer to [Release Setup Information](/release-setup.html).
                                
@@ -25,13 +25,9 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
 
 1. Environment setup for releasing artifacts (same for SNAPSHOTs and releases)    
 
-    1. Increase the default Java heap available to Maven (required for Java SE 6)   
-
-            export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
-
-    2. Use the latest Sun 1.8.x JDK
-    3. Use Maven 3.3.9 or later
-    4. Make sure the [Release Setup](release-setup.html) steps have been performed.
+    1. Use the latest Sun 1.8.x JDK
+    2. Use Maven 3.3.9 or later
+    3. Make sure the [Release Setup](release-setup.html) steps have been performed.
 
 2. Prepare the source for release:
 
@@ -43,6 +39,7 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
      3. Stage any Roadmap or Release landing pages on the site.
 
 3. Create a release candidate branch from master.
+
    X should start at 1 and increment if early release candidates fail to complete the release cycle.
 
         git checkout master
@@ -68,6 +65,7 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
     - The Maven release plugin checks for SNAPSHOT dependencies in pom's. It will not complete the prepare goal until all SNAPSHOT dependencies are resolved.
 
 6. Verify that the release process completed as expected
+    
     1. The release plugin will create pom.xml.tag files which contain the changes that would have been committed to SVN. The only differences between pom.xml.tag and it's corresponding pom.xml file should be the version number.
     2. Check release.properties and make sure that the scm properties have the right version. Sometimes the scm location can be the previous version not the next version.
     3. Verify signatures ([Verifying release signatures](#verify_signatures))
@@ -77,12 +75,15 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
         mvn -Papache-release release:clean
 
 8. Prepare the release
+    
     1. Run the "release:prepare" step for real this time. You'll be prompted for the same version information.
 
             mvn -Papache-release -U clean release:prepare -DautoVersionSubmodules=true
 
     2. Backup (zip or tar) your local release candidate directory in case you need to rollback the release after the next step is performed.
+
 9. Perform the release
+
     * This step will create a maven staging repository and site for use in testing and voting.
 
             mvn -Papache-release -Darguments='-Dmaven.test.skip.exec=true' release:perform -Dgoals=deploy -DlocalRepoDirectory=. -DlocalCheckout=true
@@ -92,15 +93,19 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
             -Duser.name=[your_apache_uid]
 
 10. Verify the Nexus release artifacts
+
     1. Verify the staged artifacts in the nexus repo     
         * https://repository.apache.org/index.html
         * Staging repositories (under Build Promotion) --> Name column --> org.apache.streams
         * Navigate through the artifact tree and make sure that all javadoc, sources, tests, jars, ... have .asc (GPG signature) and .md5 files. See http://people.apache.org/~henkp/repo/faq.html and http://www.apache.org/dev/release-signing.html#openpgp-ascii-detach-sig
+    
     2. Close the nexus staging repo
         * https://repository.apache.org/index.html
         * Staging repositories (under Build Promotion) --> Name column --> org.apache.streams
         * Click checkbox for the open staging repo (org.apache.streams-XXX) and press Close in the menu bar.
+
 11. Put the release candidate up for a vote
+
      1. Create a VOTE email thread on dev@ to record votes as replies
      2. Create a DISCUSS email thread on dev@ for any vote questions
      3. Perform a review of the release and cast your vote. See the following for more details on Apache releases
@@ -113,26 +118,12 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
          * https://repository.apache.org/index.html
          * Staging repositories (under Build Promotion) --> Name column --> org.apache.streams
          * Click checkbox of the closed staging repo (org.apache.streams-XXX) and select Release.
-13. Put the release candidate up for an IPMC vote if there are fewer than 3 +1 (binding) votes from IPMC members
-    1. Copy the source artifacts over to the release dev area     
 
-            svn co https://dist.apache.org/repos/dist/dev/incubator/streams ./streams-dev  (KEEP this directory until after the release process has been completed)
-            cd ./streams-dev
-            mkdir ${project.version}
-            cd ./${project.version}
-            wget https://repository.apache.org/content/repositories/releases/org/apache/streams/${project.name}/${project.version}/${project.name}-${project.version}-source-release.zip    
-            wget https://repository.apache.org/content/repositories/releases/org/apache/streams/${project.name}/${project.version}/${project.name}-${project.version}-source-release.zip.asc   
-            wget https://repository.apache.org/content/repositories/releases/org/apache/streams/${project.name}/${project.version}/${project.name}-${project.version}-source-release.zip.md5   
-            wget https://repository.apache.org/content/repositories/releases/org/apache/streams/${project.name}/${project.version}/${project.name}-${project.version}-source-release.zip.sha1
-            svn add ${project.name}-*
-            svn commit -m "Committing Source Release for ${project.name}-${project.version}
-
-    2. Submit a vote to general@incubator.apache.org requesting additional IPMC member votes.
-
-14. Complete the release
+12. Complete the release
+    
     1. Copy the source artifacts over to the distribution area  
 
-            svn co https://dist.apache.org/repos/dist/release/incubator/streams/releases ./streams-releases  (KEEP this directory until after the release process has been completed)
+            svn co https://dist.apache.org/repos/dist/release/streams/releases ./streams-releases  (KEEP this directory until after the release process has been completed)
             cd ./streams-releases
             mkdir ${project.version}
             cd ./${project.version}
@@ -143,23 +134,27 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
             svn add ${project.name}-*
             svn commit -m "Committing Source Release for ${project.name}-${project.version}
 
-    3. Create an official release tag from the successful release candidate tag.
+    2. Create an official release tag from the successful release candidate tag.
 
             git checkout ${project.name}-${project.version}-rcX
             git tag -a ${project.name}-${project.version} -m 'release tag ${project.name}-${project.version}'
             git push origin :refs/tags/streams-project-${project.version}
 
-    4. Update the staged website
+    3. Update the staged website
         *  Update the downloads page (downloads.md) to add new version using the mirrored URLs
         *  Modify the URL for the prior release to the archived URL for the release
-    5.  Publish the website (see [website](website.html "Website Management"))
+    
+    4.  Publish the website (see [website](website.html "Website Management"))
         *  WAIT 24hrs after committing releases for mirrors to replicate
         *  Publish updates to the download page
-    6.  Delete the prior versions
+    
+    5.  Delete the prior versions
         *  Navigate to the release directories checked out in the prior steps
         *  Delete the prior release artifacts using the svn delete command
         *  Commit the deletion
+        
 14. Update the JIRA versions page to close all issues, mark the version as "released", and set the date to the date that the release was approved. You may also need to make a new release entry for the next release.
+
 15. Announcing the release
        * Make a news announcement on the streams homepage.
        * Make an announcement about the release on the dev@streams.apache.org, and announce@incubator.apache.org list as per the Apache Announcement Mailing Lists page)
@@ -167,7 +162,9 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
 ####Recovering from a vetoed release
 
 1. Reply to the initial vote email and prepend to the original subject -
+ 
      [CANCELED]
+
 2. Clean the release prepare files and hard reset the release candidate branch.
 
         mvn -P apache-release release:clean
@@ -183,11 +180,14 @@ In either case, you'll need to first refer to [Release Setup Information](/relea
         rm -rfv /www/www.apache.org/dist/streams/${project.version}
 
 5. Drop the nexus staging repo
+
     1. https://repository.apache.org/index.html
     2. Enterprise --> Staging
     3. Staging tab --> Name column --> org.apache.streams
     4. Right click on the closed staging repo (org.apache.streams-XXX) and select Drop.
+
 5. Remove the staged site
+
 6. Make the required updates that caused the vote to be canceled during the next release cycle
 
 <a name="verify_signatures" ></a>
@@ -209,23 +209,24 @@ gpg: Signature made ...
 ####Combined Release
 In order to perform a combined release of the streams-master and streams-project trunks, do the following:    
 
-  *  Perform Steps 1-9 of the [release](#release-steps) for streams-master, streams-project, and streams-examples
+  *  Perform Steps 1-9 of the [release](#release-steps) for apache-streams and apache-streams-examples
       *  Do NOT perform step 10 until steps 1-9 have been completed for BOTH projects
       *  Build the streams-master FIRST
       *  When prompted to change dependencies on SNAPSHOTs, do so to the corresponding releases that you just built
+  
   *  Execute the remaining steps using the following e-mail template
 
-          to: streams-dev@incubator.apache.org
+          to: dev@streams.apache.org
           subject: [VOTE] Apache Streams ${release.version} Release Candidate
 
           I've created a combined ${release.version} release candidate, with the
           following artifacts up for a vote:
 
-          incubator-streams source tag (r${release.version}):
-          https://git-wip-us.apache.org/repos/asf?p=incubator-streams.git;a=commit;h=...
+          apache-streams source tag (r${release.version}):
+          https://gitbox.apache.org/repos/asf?p=streams.git;a=commit;h=...
 
-          incubator-streams-examples source tag (r${release.version}):
-          https://git-wip-us.apache.org/repos/asf?p=incubator-streams-examples.git;a=commit;h=...
+          apache-streams-examples source tag (r${release.version}):
+          https://gitbox.apache.org/repos/asf?p=streams-examples.git;a=commit;h=...
 
           Maven staging repo:
           https://repository.apache.org/content/repositories/${release.project.repository}
